--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,7 @@
         android:layout_marginEnd="39dp"
         android:ems="10"
         android:inputType="number"
+        android:textColor="#080CE6"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +104,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="number"
+        android:textColor="#ED0909"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
